packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/upgrade-immutable-event-type-timespan-end.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading the timespan end of an event type is refused.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </object-types>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" timespan-start="a" timespan-end="b" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="c" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
        </properties>
        <relations/>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" timespan-start="a" timespan-end="c" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="c" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
        </properties>
        <relations/>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
</edxml>
